# Hoshimi

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
apps/cli/: Cargo.toml
apps/driver/: Cargo.toml
apps/driver/src/: animation_test_page.rs  counter_page.rs  event_adapter.rs  main.rs
bins/cli/: Cargo.toml
bins/driver/: Cargo.toml
bins/driver/src/: main.rs
crates/core/: Cargo.toml
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  logger.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: error.rs  lib.rs  scene_renderer.rs  skia_renderer.rs  types.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  logger.rs  types.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  types.rs
crates/ui/: Cargo.toml
crates/ui/src/: events.rs  key.rs  lib.rs
crates/ui/src/animation/: controller.rs  curve.rs  mod.rs  tween.rs
crates/ui/src/events/: mod.rs
crates/ui/src/gesture/: mod.rs
crates/ui/src/painter/: mod.rs  scene_renderer_painter.rs  skia_renderer_painter.rs  traits.rs
crates/ui/src/render/: mod.rs  traits.rs
crates/ui/src/render_object/: mod.rs  traits.rs
crates/ui/src/router/: mod.rs  page.rs  snapshot.rs  transition.rs  types.rs
crates/ui/src/state/: mod.rs  traits.rs
crates/ui/src/tree/: diff.rs  mod.rs  reconciler.rs  ui_tree.rs
crates/ui/src/widget/: mod.rs  traits.rs
crates/ui/src/widget/animated/: animated_box_shadow.rs  mod.rs  (+5 more)
docs/: Development Doc.md  Hot Reload Doc.md  hoshimi_mvu_ui_structure.md  router_state_management_example.md
docs/Phases/: Phase 3 UI System.md  Phase 5 Tooling and Publishing.md
docs/architecture/: Architecture Design.md  Hot Reload Doc.md  Lighting Render Pipeline.md  Technology Stack Selection.md
docs/manual/Plugin System/: Plugin Development Guide.md
docs/phases/: Phase_1_Core_and_Routing.md  Phase_2_Scripting_and_Interaction.md  Phase_3_UI_System.md  Phase_4_Plugins_and_Multimedia.md
docs/roadmap/: Development Doc.md
docs/roadmap/Phases/: Phase 1 Core and Routing.md
docs/syntax_design/: Scripting Syntax Guide.md  UI DSL Syntax Guide.md
docs/syntax_guide/: layout_with_lua.md
(+20 files in other folders)
