[workspace]
members = [
    "bins/cli",
    "bins/driver",
    "crates/renderer",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
# For window setup, opengl handler getting, input event, audio process and so on.
sdl3 = "0.17.3"

# For high-performance visual presentation
skia-safe = { version = "0.91.1", features = ["gl", "textlayout", "webp", "svg"] }

# For checking the context
gl = "0.14.0"

serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"]}